--- a/Application/trashtag/web/index.html
+++ b/Application/trashtag/web/index.html
@@ -27,6 +27,7 @@
   <meta name="apple-mobile-web-app-title" content="trashtag">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsN1BAgpLAl3ZasZmAvBm7BecUroVtIOc"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
